--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>giovanna</title>
-    <link rel="stylesheet" href="style.css">
+   <link rel="stylesheet" href="style.css">
+    <title>TRILHA DE PROGRAMAÇÃO</title>
 </head>
 <body>
-    <h1>AULA DE PROGRAMAÇÃO</h1>
-    <h2>testando vs.code</h2>
-    <script src="main.js"></script> 
+    <h1>SALVE O ATHLETICO PR</h1>
+<a href="https://www.athletico.com.br/">SAIBA MAIS</a>
+
+<a href="https://www.espn.com.br/futebol/time/calendario/_/id/3458/athletico-pr">CALENDÁRIO DE JOGOS</a>
 </body>
 </html>
